# altegio_bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  ci_deploy.yml  deploy.yml
alembic/: env.py
alembic/versions/: 075dc7843609_merge_multiple_heads.py  0920db551b57_add_retry_fields_to_message_jobs.py  16ffb80bd379_add_whatsapp_senders_and_service_sender_.py  195f3116bdca_add_clients_records_record_services.py  2c24d34e45e2_create_whatsapp_events_and_fix_dedupe.py  6f237a8a2850_add_message_jobs_locked_at.py  8f3adb755462_unique_outbox_job_id.py  98439805d041_add_whatsapp_events.py  a1b2c3d4e5f6_add_smart_test_runs.py  a2b3c4d5e6f7_campaign_returned_after_visit.py  a3b4c5d6e7f8_add_promo_leads.py  aa0be6363e16_add_messaging_tables.py  aef7d5e35640_init.py  b09b0b0548dc_job_defaults.py  b2c3d4e5f6a7_add_campaign_tables.py  b4c5d6e7f8a9_campaign_crm_unavailable_counter.py  c5d6e7f8a9b0_campaign_service_category_unavailable.py  c6b3a9d7e210_add_client_whatsapp_opt_out.py  d1e2f3a4b5c6_add_chatwoot_conversation_id.py  e1f2a3b4c5d6_add_ops_indexes.py  e4f5a6b7c8d9_campaign_mvp.py  f1a2b3c4d5e6_campaign_crm_diagnostics.py  f3a1c4e9b2d0_ensure_message_jobs_locked_at.py  f8e7d6c5b4a3_add_message_source_to_outbox.py
src/altegio_bot/: altegio_loyalty.py  altegio_records.py  chatwoot_client.py  chatwoot_sync.py  db.py  main.py  message_planner.py  meta_templates.py  perf.py  service_filter.py  settings.py  template_validation.py  utils.py  whatsapp_routing.py
src/altegio_bot/campaigns/: __init__.py  altegio_crm.py  followup.py  loyalty_cleanup.py  reports.py  runner.py  segment.py
src/altegio_bot/models/: __init__.py  models.py
src/altegio_bot/ops/: auth.py  campaigns_api.py  router.py
src/altegio_bot/providers/: base.py  chatwoot_hybrid.py  dummy.py  factory.py  meta_cloud.py
src/altegio_bot/scripts/: backfill_reminder_2h_lash_only.py  cancel_review_3d_over_visit_limit.py  fix_phone_e164_prefix.py  migrate_contacts_to_chatwoot.py  repair_schedule_campaign_followups.py  run_campaign_worker.py  run_inbox_worker.py  run_monthly_newsletter_smart.py  run_newsletter_new_clients_monthly.py  run_outbox_worker.py  run_test_newsletter_smart.py  run_whatsapp_inbox_worker.py  seed_senders.py  seed_templates.py  smoke_outbox.py  sync_future.py  sync_meta_templates.py
src/altegio_bot/tests/: conftest.py  test_altegio_loyalty.py  test_altegio_records.py  test_chatwoot_client.py  test_chatwoot_loop_guard.py  test_chatwoot_mirror_task_fix.py  test_chatwoot_provider.py  test_chatwoot_sync.py  test_chatwoot_webhook.py  test_comeback_3d_gate.py  test_inbox_worker.py  (+29 more)
(+36 files in other folders)
