[project]
name = "altegio-bot"
version = "0.1.0"
description = "Altegio webhooks -> DB inbox (idempotent) -> future WhatsApp sender"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "python-json-logger>=2.0",
  "orjson>=3.10",
  "pytest>=9.0.2",
  "aiohttp>=3.13.3",
  "httpx>=0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.alembic]
script_location = "migrations"
