[project]
name = 'altegio-bot'
version = '0.1.0'
description = 'FastAPI webhook + workers for Altegio -> WhatsApp'
requires-python = '>=3.12'
dependencies = [
    'alembic>=1.13',
    'asyncpg>=0.29',
    'fastapi>=0.115',
    'httpx>=0.27',
    'pydantic-settings>=2.6',
    'pydantic>=2.9',
    'python-dotenv>=1.0',
    'sqlalchemy[asyncio]>=2.0',
    'uvicorn[standard]>=0.30',
]

[dependency-groups]
dev = [
    'pytest-asyncio>=0.24',
    'pytest>=8.3',
    'respx>=0.21',
]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
addopts = '-q'
testpaths = ['src/altegio_bot/tests']

[tool.ruff]
line-length = 79