[build-system]
requires = ['setuptools>=69', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'altegio-bot'
version = '0.1.0'
description = 'FastAPI webhook + workers for Altegio -> WhatsApp'
requires-python = '>=3.12'
dependencies = [
  'alembic>=1.13',
  'asyncpg>=0.29',
  'fastapi>=0.115',
  'httpx>=0.27',
  'pydantic-settings>=2.6',
  'pydantic>=2.9',
  'python-dotenv>=1.0',
  'python-multipart>=0.0.9',
  'sqlalchemy[asyncio]>=2.0',
  'uvicorn[standard]>=0.30',
]

[dependency-groups]
dev = [
  'pytest-asyncio>=0.24',
  'pytest>=8.3',
  'respx>=0.21',
  "ruff>=0.15.4",
]

[tool.setuptools]
package-dir = { '' = 'src' }
include-package-data = true

[tool.setuptools.packages.find]
where = ['src']

[tool.pytest.ini_options]
asyncio_mode = 'auto'
addopts = '-q'
testpaths = ['src/altegio_bot/tests']

[tool.ruff]

line-length = 120

exclude = [
    ".git",
    ".venv",
    "venv",
    "alembic",
    "__pycache__",
    "altegio_bot.egg-info"
]

[tool.ruff.lint.per-file-ignores]
# В файлах __init__.py разрешаем импортировать модули.
"__init__.py" = ["F401"]

[tool.ruff.lint]
# Включаем базовые правила:
# E - ошибки стиля (pycodestyle)
# F - логические ошибки (Pyflakes), например, неиспользуемые переменные
# I - сортировка импортов (isort)
select = ["E", "F", "I"]

# Если какое-то правило бесит, его можно отключить тут:
ignore = []
